<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Drinkup</string>
    <string name="confirm_intake_title">Record intake</string>
    <string name="confirm_intake_message">Save intake of %1$s (%2$d ml)?</string>
    <string name="drink_alarm_channel_name">Drink Alarms</string>
    <string name="drink_alarm_icon">Drink icon</string>
    <string name="drink_alarm_title">Seek intake</string>
    <string name="drink_alarm_message">Please drink at least %d ml</string>
    <string name="drink_alarm_ok">OK</string>
    <string name="drink_alarm_skip">Skip</string>
    <string name="drink_amount">%d ml</string>
    <string name="goal_progress">%1$d / %2$d ml (%3$d %%)</string>
    <string name="history_entry_name">%1$s (%2$d ml)</string>
    <string name="intake_size_name">Name</string>
    <string name="intake_size_amount">Amount (in ml)</string>
    <string name="menu_save">Save</string>
    <string name="menu_add">Add</string>
    <string name="nav_edit_intake_size">Edit intake size</string>
    <string name="nav_edit_schedule">Edit schedule</string>
    <string name="nav_intake_history">Intake history</string>
    <string name="nav_intake_sizes">Intake Sizes</string>
    <string name="menu_drink_alarm_test">Drink Alarm Test</string>
    <string name="schedule_goal">Goal (in ml)</string>
</resources>
